--- a/unstable/libp2p/stream/connection.html
+++ b/unstable/libp2p/stream/connection.html
@@ -212,7 +212,7 @@ window.addEventListener("DOMContentLoaded", main2);
   timerTaskFut: Future[void]
   timeoutHandler*: TimeoutHandler
   peerId*: PeerId
-  observedAddr*: MultiAddress
+  observedAddr*: Opt[MultiAddress]
   upgraded*: Future[void]
   protocol*: string
   transportDir*: Direction
@@ -247,14 +247,14 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">new
-      <li><a class="reference" href="#new%2CtypeConnection%2CPeerId%2CDirection%2CDuration%2CTimeoutHandler%2CMultiAddress"
+      <li><a class="reference" href="#new%2CtypeConnection%2CPeerId%2CDirection%2COpt%5BMultiAddress%5D%2CDuration%2CTimeoutHandler"
     title="new(C: type Connection; peerId: PeerId; dir: Direction;
+    observedAddr: Opt[MultiAddress];
     timeout: Duration = DefaultConnectionTimeout;
-    timeoutHandler: TimeoutHandler = nil;
-    observedAddr: MultiAddress = MultiAddress()): Connection">new(C: type Connection; peerId: PeerId; dir: Direction;
+    timeoutHandler: TimeoutHandler = nil): Connection">new(C: type Connection; peerId: PeerId; dir: Direction;
+    observedAddr: Opt[MultiAddress];
     timeout: Duration = DefaultConnectionTimeout;
-    timeoutHandler: TimeoutHandler = nil;
-    observedAddr: MultiAddress = MultiAddress()): Connection</a></li>
+    timeoutHandler: TimeoutHandler = nil): Connection</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">onUpgrade
@@ -341,7 +341,7 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">timerTaskFut</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span>
   <span class="Identifier">timeoutHandler</span><span class="Operator">*</span><span class="Other">:</span> <a href="connection.html#TimeoutHandler"><span class="Identifier">TimeoutHandler</span></a>
   <span class="Identifier">peerId</span><span class="Operator">*</span><span class="Other">:</span> <a href="../peerid.html#PeerId"><span class="Identifier">PeerId</span></a>
-  <span class="Identifier">observedAddr</span><span class="Operator">*</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a>
+  <span class="Identifier">observedAddr</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span>
   <span class="Identifier">upgraded</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span>
   <span class="Identifier">protocol</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
   <span class="Identifier">transportDir</span><span class="Operator">*</span><span class="Other">:</span> <a href="lpstream.html#Direction"><span class="Identifier">Direction</span></a>
@@ -353,9 +353,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L34"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L35"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L34" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L35" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -365,9 +365,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L32"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L33"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L32" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L33" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -382,9 +382,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L28"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L29"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L28" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L29" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -394,9 +394,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L29"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L30"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L29" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L30" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -411,9 +411,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L110"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L111"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L110" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L111" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -423,24 +423,24 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L49"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L50"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L49" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L50" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
-<div id="new,typeConnection,PeerId,Direction,Duration,TimeoutHandler,MultiAddress" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeConnection%2CPeerId%2CDirection%2CDuration%2CTimeoutHandler%2CMultiAddress"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">C</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">Connection</span><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
+<div id="new,typeConnection,PeerId,Direction,Opt[MultiAddress],Duration,TimeoutHandler" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeConnection%2CPeerId%2CDirection%2COpt%5BMultiAddress%5D%2CDuration%2CTimeoutHandler"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">C</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">Connection</span><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
+         <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span>
          <span class="Identifier">timeout</span><span class="Other">:</span> <span class="Identifier">Duration</span> <span class="Other">=</span> <span class="Identifier">DefaultConnectionTimeout</span><span class="Other">;</span>
-         <span class="Identifier">timeoutHandler</span><span class="Other">:</span> <a href="connection.html#TimeoutHandler"><span class="Identifier">TimeoutHandler</span></a> <span class="Other">=</span> <span class="Keyword">nil</span><span class="Other">;</span>
-         <span class="Identifier">observedAddr</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a> <span class="Other">=</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <a href="connection.html#Connection"><span class="Identifier">Connection</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+         <span class="Identifier">timeoutHandler</span><span class="Other">:</span> <a href="connection.html#TimeoutHandler"><span class="Identifier">TimeoutHandler</span></a> <span class="Other">=</span> <span class="Keyword">nil</span><span class="Other">)</span><span class="Other">:</span> <a href="connection.html#Connection"><span class="Identifier">Connection</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L160"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L161"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L160" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L161" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -451,9 +451,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L61"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L62"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L61" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L62" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -463,9 +463,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L65"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L66"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L65" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L66" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -476,9 +476,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L53"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L54"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L53" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L54" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -493,9 +493,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L94"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L95"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L94" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L95" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -505,9 +505,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L157"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L158"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L157" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L158" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -517,9 +517,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L74"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L75"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L74" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L75" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -534,9 +534,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L72"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/stream/connection.nim#L73"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L72" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/connection.nim#L73" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -555,7 +555,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-15 10:18:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-22 19:58:07 UTC</small>
       </div>
     </div>
   </div>
