--- a/unstable/libp2p/transports/wstransport.html
+++ b/unstable/libp2p/transports/wstransport.html
@@ -233,10 +233,10 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">new
-      <li><a class="reference" href="#new%2CtypeWsStream%2CWSSession%2CDirection%2CMultiAddress"
-    title="new(T: type WsStream; session: WSSession; dir: Direction; timeout = 10.minutes;
-    observedAddr: MultiAddress = MultiAddress()): T:type">new(T: type WsStream; session: WSSession; dir: Direction; timeout = 10.minutes;
-    observedAddr: MultiAddress = MultiAddress()): T:type</a></li>
+      <li><a class="reference" href="#new%2CtypeWsStream%2CWSSession%2CDirection%2COpt%5BMultiAddress%5D"
+    title="new(T: type WsStream; session: WSSession; dir: Direction;
+    observedAddr: Opt[MultiAddress]; timeout = 10.minutes): T:type">new(T: type WsStream; session: WSSession; dir: Direction;
+    observedAddr: Opt[MultiAddress]; timeout = 10.minutes): T:type</a></li>
   <li><a class="reference" href="#new%2Ctypedesc%5BWsTransport%5D%2CUpgrade%2Cset%5BServerFlags%5D%2CopenArray%5BExtFactory%5D%2CRng"
     title="new(T: typedesc[WsTransport]; upgrade: Upgrade; flags: set[ServerFlags] = {};
     factories: openArray[ExtFactory] = []; rng: Rng = nil;
@@ -352,9 +352,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L96"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L97"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L96" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L97" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -369,9 +369,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L37"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L38"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L37" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L38" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -380,17 +380,17 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="new,typeWsStream,WSSession,Direction,MultiAddress" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeWsStream%2CWSSession%2CDirection%2CMultiAddress"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">WsStream</span><span class="Other">;</span> <span class="Identifier">session</span><span class="Other">:</span> <span class="Identifier">WSSession</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="../stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
-         <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">.</span><span class="Identifier">minutes</span><span class="Other">;</span> <span class="Identifier">observedAddr</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a> <span class="Other">=</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
+<div id="new,typeWsStream,WSSession,Direction,Opt[MultiAddress]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeWsStream%2CWSSession%2CDirection%2COpt%5BMultiAddress%5D"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">WsStream</span><span class="Other">;</span> <span class="Identifier">session</span><span class="Other">:</span> <span class="Identifier">WSSession</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="../stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
+         <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">.</span><span class="Identifier">minutes</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
     <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L45"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L46"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L45" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L46" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -431,9 +431,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L111"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L112"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L111" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L112" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -462,9 +462,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L89"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L90"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L89" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L90" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -474,9 +474,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L93"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L94"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L93" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L94" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -500,9 +500,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L75"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L76"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L75" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L76" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -513,9 +513,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 listen on the transport 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L116"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L117"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L116" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L117" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -526,9 +526,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 stop the transport 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L170"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L171"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L170" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L171" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -539,9 +539,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L85"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/transports/wstransport.nim#L86"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L85" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L86" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -560,7 +560,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-15 10:18:36 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-22 19:58:10 UTC</small>
       </div>
     </div>
   </div>
